--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,18 @@ body,
   color: inherit; /* Zachowuje domyślny kolor tekstu */
 }
 
+/* Sponsors scroll */
+/* Ukryj pasek przewijania w przeglądarkach opartych na WebKit (np. Safari, nowsze wersje Chrome) */
+.animation-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Ukryj pasek przewijania w Firefox */
+.animation-container {
+  scrollbar-width: none;
+}
+
+
 @keyframes slide {
   from {
     transform: translateX(0);
