--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,10 @@ body,
   transition: transform 500ms ease-in-out;
 }
 
+.transition-fill {
+  transition: fill 0.3s ease-in-out;
+}
+
 @media (max-width: 1620px) {
   .social-responsive {
     display: none;
