--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Syncopate:wght@400;700&display=swap");
+
+@font-face {
+  font-family: "Syncopate";
+  src: url("/fonts/Syncopate-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Syncopate";
+  src: url("/fonts/Syncopate-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+.font-syncopate {
+  font-family: "Syncopate", sans-serif;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
 html,
 body,
 :root {
